--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,12 +38,17 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
+    "react-native-autocomplete-input": "^5.5.6",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
