--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,26 +4,26 @@
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "../../assets/images/splash-icon.png",
+    "icon": "@/assets/images/splash-icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
       "icon":{
-        "light": "../../assets/images/splash-icon-white.png",
-        "dark": "../../assets/images/splash-icon-dark.png",
-        "tinted": "../../assets/images/splash-icon-dark.png"
+        "light": "@/assets/images/splash-icon-white.png",
+        "dark": "@/assets/images/splash-icon-dark.png",
+        "tinted": "@/assets/images/splash-icon-dark.png"
       }
     },
     "android": {
       "icon":{
-        "light": "../../assets/images/splash-icon-white.png",
-        "dark": "../../assets/images/splash-icon-dark.png",
-        "tinted": "../../assets/images/splash-icon-dark.png"
+        "light": "@/assets/images/splash-icon-white.png",
+        "dark": "@/assets/images/splash-icon-dark.png",
+        "tinted": "@/assets/images/splash-icon-dark.png"
       },
       "adaptiveIcon": {
-        "foregroundImage": "../../assets/images/adaptive-icon.png",
+        "foregroundImage": "@/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
@@ -31,14 +31,14 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "../../assets/images/favicon.png"
+      "favicon": "@/assets/images/favicon.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "../../assets/images/splash-icon-dark.png",
+          "image": "@/assets/images/splash-icon-dark.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
