--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^4.1.3",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.67.1",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-autocomplete-input": "^5.5.6",
+    "react-native-date-picker": "^5.0.11",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-picker-select": "^9.3.1",
