--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,8 @@
     "react-native-webview": "13.12.5",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
