--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,11 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@elastic/elasticsearch": "^8.17.1",
         "@nestjs/common": "^11.0.1",
         "@nestjs/config": "^4.0.0",
         "@nestjs/core": "^11.0.1",
+        "@nestjs/elasticsearch": "^11.0.0",
         "@nestjs/jwt": "^11.0.0",
         "@nestjs/mapped-types": "^2.1.0",
         "@nestjs/passport": "^11.0.5",
