--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.67.1",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.37",
+    "expo": "^53.0.0",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
